# ansible-powerdns-role

./: .gitignore  README.md  pyproject.toml  requirements.yml  tox.ini
.github/: release-drafter.yml
.github/workflows/: molecule.yml  release.yml
examples/: pdns-with-postgresql-playbook.yml
inventory/: hosts
meta/: main.yml
molecule/powerdns-postgresql/: converge.yml  molecule.yml
molecule/resources/: Dockerfile.archlinux-systemd.j2  Dockerfile.centos-systemd.j2  Dockerfile.debian-systemd.j2  Dockerfile.default.j2  create.yml  prepare.yml
molecule/resources/tests/backend_postgresql/: test_backend_postgresql.py
molecule/resources/vars/: pdns-backends.yml  pdns-common.yml  test-secrets.yml
tasks/: database-postgresql.yml  main.yml
vars/: Archlinux.yml  RedHat-9.yml  Ubuntu-20.yml  main.yml  secrets.yml
